Fixed z-index for header

--- a/Source/client/app/app.less
+++ b/Source/client/app/app.less
@@ -76,11 +76,11 @@ body {
   left: 0;
   right: 0;
   top:0;
-  z-index:19000;
+  z-index: 1030;
   .navbar{
     border-radius: 0;
   }
-  
+
 }
 
 .maincontainer {
